# smart-waste-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py
env/: waste_env.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
