[project]
name = "smart-waste-env"
version = "0.1.0"
description = "Smart Waste Management Multi-Agent RL Environment"
authors = [{name = "Aniruddh Venkatesan","N Sachin","Sonika P"}]

dependencies = [
    "numpy",
    "matplotlib",
    "flask",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
